--- a/index.html
+++ b/index.html
@@ -158,11 +158,20 @@
         })
 
 
+
         function updateCount(id, k) {
             const cnt = document.getElementById(id).value;
             const cntNum = parseInt(cnt);
             var currentCnt = cntNum + k;
-            document.getElementById(id).value = currentCnt;
+            var finalCnt;
+            if(currentCnt>=0){
+                finalCnt=currentCnt;
+            }
+            else{
+                finalCnt=0;
+            }
+            document.getElementById(id).value = finalCnt;
+            
         }
        function subTotalPrice(){
            const firstClassFinal =document.getElementById('firstClass').value;
