--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <button id="bookNow" class="btn-style">Book Now</button>
         </div>
     </main>
+
+    <!-- Total information and Confirmation Page. -->
+
     <div id="secondPart" class="container">
         <div class="container">
             <h2 class="confirm">Ticket Confirmation</h2>
@@ -126,6 +129,9 @@
         </div>
         <button id="confirmBtn" class="btn btn-success">Confirm Ticket</button>
     </div>
+
+    <!-- Confirmation success and Congratulate page. -->
+
     <div id="finalPart" class="container finalPage">
         <span><i class="fas fa-check-circle SuccessSign"></i></span>
         <h2 style="color: tomato;">Congratulations!!!</h2>
@@ -133,6 +139,8 @@
         <br><br><br>
         <h6 class="thanks">Thanks for choosing Cruise Queen</h6>
     </div>
+
+    <!-- External Javascipt File included in this part -->
 
     <script src="scripts.js"></script>
 
