--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Confirmation success and Congratulate page. -->
 
     <div id="finalPart" class="container finalPage">
-        <span><i class="fas fa-check-circle SuccessSign"></i></span>
+        <span><i class="far fa-check-circle SuccessSign"></i></span>
         <h2 style="color: tomato;">Congratulations!!!</h2>
         <h3>Your Booking has been successfully confirmed.</h3>
         <br><br><br>
